# clip-mesh

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
src/: cli.rs  main.rs
src/core/: clip_item.rs  clipboard.rs  mod.rs
src/storage/: mod.rs
src/transforms/: mod.rs  number_format.rs  text_transform.rs
src/ui/: mod.rs
