[package]
name = "clip-mesh"
version = "0.1.0"
edition = "2021"
authors = ["ClipMesh Team"]
description = "AI-powered universal clipboard manager"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clipboard = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "shellapi"] }

# AI/ML dependencies (for future use)
# ort = { version = "2.0", optional = true }
# candle = { version = "0.6", optional = true }
